fix sonar problems